# Goodser

./: dev-sync.sh  docker-compose.yml  generate-icons.js  project.config.json  project.private.config.json  问题.md
Goodser/: generate_icon.py
backend/: .env  .env.example  Cargo.toml  Dockerfile  Dockerfile.base  Makefile  README.md  dev-entry.sh
backend/sql/: init.sql
backend/src/: config.rs  error.rs  main.rs
backend/src/db/: mod.rs  mysql.rs
backend/src/handlers/: health.rs  image.rs  inbound.rs  inventory.rs  mod.rs  order.rs  product.rs  status_code.rs  tag.rs  whitelist.rs
backend/src/middleware/: mod.rs
backend/src/models/: inbound_log.rs  inventory.rs  mod.rs  order.rs  product.rs  status_code.rs  tag.rs  whitelist.rs
backend/src/storage/: mod.rs  rustfs.rs
backend/tests/: integration_test.rs
cloudfunctions/goodser/: index.js
cloudfunctions/init/: index.js
docs/: design-document.md  nas-design.md  wx-cloud-design.md  中间件.md
miniprogram/: app.js  app.json  app.wxss  project.config.json
miniprogram/components/empty-state/: empty-state.js  empty-state.wxml  empty-state.wxss
miniprogram/components/order-card/: order-card.js  order-card.wxml  order-card.wxss
miniprogram/components/product-card/: product-card.js  product-card.wxml  product-card.wxss
miniprogram/components/search-bar/: search-bar.js  search-bar.wxml  search-bar.wxss
miniprogram/pages/inbound/: batch.js  batch.json  batch.wxml  batch.wxss  index.js  index.json  (+13 more)
miniprogram/utils/: db.js  image-cache.js  mock-data.js  util.js
rustReports/: Todo.md  doc.md  report.md
(+51 files in other folders)
