[package]
name = "goodser-backend"
version = "0.1.0"
edition = "2021"
description = "Goodser inventory management backend API server"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros", "multipart"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "mysql", "chrono", "uuid", "migrate"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# S3 / RustFS
aws-sdk-s3 = { version = "1", features = ["behavior-version-latest"] }
aws-config = "1"
aws-credential-types = "1"

# Error handling
thiserror = "1"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Config
dotenvy = "0.15"

# Time
chrono = { version = "0.4", features = ["serde"] }

# ID generation
uuid = { version = "1", features = ["v4", "serde"] }

# HTTP client (for upload)
reqwest = { version = "0.12", features = ["json"] }

# Async helpers
futures = "0.3"
async-trait = "0.1"

[dev-dependencies]
tower-test = "0.4"
